[package]
name = "kv"
version = "0.1.0"
authors = ["caliu17 <caliu17@student.ubc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.0"
clap = "2.32.0"
structopt = "0.3.21"
serde = "1.0.125"